# fp-homework

./: README.md  script.sh
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3_1.hs  Block3_2.hs  Block3_3.hs  Block3_4.hs  Block4.hs  Block5.hs  Lib.hs
hw1/test/: Block1.hs  DocTests.hs
hw2/: README.md  hw2.cabal
hw2/src/: Block1.hs  Block2_1.hs  Block2_2.hs  Block3_1.hs  Block3_2.hs  Block3_3.hs  Block3_4.hs  BlockBonus.hs  FromMonad.hs  FromMonadFish.hs  Monad.hs  MonadFish.hs  MonadJoin.hs
hw2/test/: Block1_NonEmptyTest.hs  Block1_SumTest.hs  Block1_TreeTest.hs  Block2_1Test.hs  Block3_3Test.hs  Block3_4Test.hs  Spec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/: SimpleBashParser.hs  Structure.hs  Task1.hs
hw4/: LICENSE  README.md  hw4.cabal
hw4/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw4/test/: Spec.hs  Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
hw5/: README.md  hw5.cabal
hw5/src/: Task1.hs  Task2.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw5/test/: Spec.hs  Task1Spec.hs  Task2Spec.hs  Task4Spec.hs  Task5Spec.hs  Task678Spec.hs
