name:                 hw1
version:              0.1.0.0
synopsis:             Synopsis for task 1
description:          Task 1 for FP ITMO course

homepage:             https://github.com/breakchir/fp-homework/tree/master/hw1#readme
license:              MIT
license-file:         LICENSE
author:               Yaroslav Balashov
maintainer:           mx.yarik@gmail.com
copyright:            2019 Yaroslav Balashov

category:             Web
build-type:           Custom
extra-source-files:   README.md
cabal-version:        >=1.10
tested-with:          GHC == 8.0.1

custom-setup
 setup-depends:       base >= 4 && <5
                    , Cabal
                    , cabal-doctest >= 1 && <1.1

library
  hs-source-dirs:     src
  exposed-modules:    Block1
                    , Block2
                    , Block3_1
                    , Block3_2
                    , Block3_3
                    , Block3_4
                    , Block4
                    , Block5
                    , Lib
  ghc-options:        -Wall
  build-depends:      base >= 4.9 && < 5
                    , random
  default-language:   Haskell2010

test-suite doctests
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded -Wall
  hs-source-dirs:     test
  main-is:            DocTests.hs
  build-depends:      base
                    , doctest >= 0.8
                    , hw1
