name:                 hw2
version:              0.1.0.0
synopsis:             Synopsis for task 2
description:          Task 2 for FP ITMO course
                      
homepage:             https://github.com/breakchir/fp-homework/tree/master/hw2#readme
license:              MIT
license-file:         LICENSE
author:               Yaroslav Balashov
maintainer:           mx.yarik@gmail.com
copyright:            2019 Yaroslav Balashov
                      
category:             Web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
tested-with:          GHC == 8.0.1

library
  hs-source-dirs:     src
  exposed-modules:    Block1
                    , Block2_1
                    , Block2_2
                    , Block3_1
                    , Block3_2
                    , Block3_3
                    , Block3_4
                    , BlockBonus
                    , FromMonad
                    , FromMonadFish
                    , Monad
                    , MonadFish
                    , MonadJoin
  ghc-options:        -Wall
  build-depends:      base >= 4.9 && < 5
                    , containers
                    , mtl
                    , transformers
  default-language:   Haskell2010

test-suite hw2-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      Block1_NonEmptyTest
                    , Block1_SumTest
                    , Block1_TreeTest
                    , Block2_1Test
                    , Block3_3Test
                    , Block3_4Test
  main-is:            Spec.hs
  build-depends:      base
                    , hspec
                    , hw2
                    , mtl
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
