name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/breakchir/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Yaroslav Balashov
maintainer:          mx.yarik@gmail.com
copyright:           2019 Yaroslav Balashov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
                     , Task4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , hashable
                     , parallel
                     , stm
                     , vector
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Task1Spec
                     , Task2Spec
                     , Task3Spec
                     , Task4Spec
  main-is:             Spec.hs
  build-depends:       base
                     , hw4
                     , hashable
                     , hspec
                     , criterion
                     , QuickCheck
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
